# mpdao-token

./: Cargo.toml  README.md
scripts/: build.sh
scripts/mainnet/: 0-mainnet-set-vars.sh  backup-wasm.sh  deploy-mainnet.sh  propose-upgrade.sh  redeploy-mainnet.sh  view.sh
scripts/testnet/: 0-testnet-set-vars.sh  add-minter-testnet.sh  deploy-testnet.sh  redeploy-testnet.sh  view.sh
src/: lib.rs
