[package]
name = "mpdao-token"
version = "0.1.0"
edition = "2021"
authors = ["metapool.app <hello@metapool.app>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.0.0"
near-contract-standards = "5.0.0"

[dev-dependencies]
anyhow = "1.0"
near-sdk = { version = "5.0.0", features = ["unit-testing"] }
tokio = { version = "1.14", features = ["full"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
